log recover console statements to m7r-infra.log